removed reset cart and updated total function

--- a/shop.html
+++ b/shop.html
@@ -67,9 +67,8 @@
         <!-- Cart items will be added here dynamically -->
       </div>
       <div class="cart-total">
-        <h3>Total: ₱<span id="cartTotal">0</span></h3>
+        <h3><span id="cartTotal"></span></h3>
         <button id="checkoutBtn" class="btn btn-primary">Checkout</button>
-        <button id="resetCartBtn" class="btn btn-primary">Reset Cart</button>
       </div>
     </div>
   </div>
@@ -103,7 +102,7 @@
             </div>
             <div class="product-info">
               <h3 class="product-title">Look 895 Carbon</h3>
-              <p class="product-price">$4,000.00</p>
+              <p class="product-price">$4000.00</p>
             </div>
           </div>
 
@@ -129,7 +128,7 @@
             </div>
             <div class="product-info">
               <h3 class="product-title">Cervelo S5 Gold</h3>
-              <p class="product-price">$5,560.00</p>
+              <p class="product-price">$5560.00</p>
             </div>
           </div>
 
