current status for final checking

--- a/shop.html
+++ b/shop.html
@@ -31,11 +31,7 @@
           </li>
 
           <li>
-            <a href="#" class="navbar-link">Portfolio</a>
-          </li>
-
-          <li>
-            <a href="#" class="navbar-link">Blog</a>
+            <a href="blog.html" class="navbar-link">Blog</a>
           </li>
 
           <li>
@@ -145,7 +141,7 @@
             </div>
           </div>
 
-          <div class="product-card" data-category="chain">
+          <div class="product-card" data-category="chains">
             <div class="product-image">
               <img src="./assets/images/izumichain.png" alt="Product Name">
               <div class="product-overlay">
@@ -155,6 +151,45 @@
             <div class="product-info" >
               <h3 class="product-title">Izumi Chain (Silver)</h3>
               <p class="product-price">$220.00</p>
+            </div>
+          </div>
+
+          <div class="product-card" data-category="chains">
+            <div class="product-image">
+              <img src="./assets/images/izumijetblack.jpg" alt="Product Name">
+              <div class="product-overlay">
+                <button class="add-to-cart-btn">Add to Cart</button>
+              </div>
+            </div>
+            <div class="product-info" >
+              <h3 class="product-title">Izumi Chain (Jet Black)</h3>
+              <p class="product-price">$230.00</p>
+            </div>
+          </div>
+
+          <div class="product-card" data-category="chains">
+            <div class="product-image">
+              <img src="./assets/images/shimanoolive.jpg" alt="Product Name">
+              <div class="product-overlay">
+                <button class="add-to-cart-btn">Add to Cart</button>
+              </div>
+            </div>
+            <div class="product-info" >
+              <h3 class="product-title">Izumi Chain (Jet Black)</h3>
+              <p class="product-price">$230.00</p>
+            </div>
+          </div>
+
+          <div class="product-card" data-category="chains">
+            <div class="product-image">
+              <img src="./assets/images/didstandard.jpg" alt="Product Name">
+              <div class="product-overlay">
+                <button class="add-to-cart-btn">Add to Cart</button>
+              </div>
+            </div>
+            <div class="product-info" >
+              <h3 class="product-title">D.I.D. Standard Chain</h3>
+              <p class="product-price">$130.00</p>
             </div>
           </div>
 
@@ -171,6 +206,71 @@
             </div>
           </div>
 
+          <div class="product-card"data-category="dropbars">
+            <div class="product-image">
+              <img src="./assets/images/profiledropbar.jpg" alt="Product Name">
+              <div class="product-overlay">
+                <button class="add-to-cart-btn">Add to Cart</button>
+              </div>
+            </div>
+            <div class="product-info">
+              <h3 class="product-title">Profile Design Dropbar</h3>
+              <p class="product-price">$150.00</p>
+            </div>
+          </div>
+          
+          <div class="product-card"data-category="dropbars">
+            <div class="product-image">
+              <img src="./assets/images/cinellidrops.jpg" alt="Product Name">
+              <div class="product-overlay">
+                <button class="add-to-cart-btn">Add to Cart</button>
+              </div>
+            </div>
+            <div class="product-info">
+              <h3 class="product-title">Cinelli Dropbar</h3>
+              <p class="product-price">$190.00</p>
+            </div>
+          </div>
+
+          <div class="product-card" data-category="forks">
+            <div class="product-image">
+              <img src="./assets/images/unknownfork.jpg" alt="Product Name">
+              <div class="product-overlay">
+                <button class="add-to-cart-btn">Add to Cart</button>
+              </div>
+            </div>
+            <div class="product-info">
+              <h3 class="product-title">Unknown Fork Full Carbon</h3>
+              <p class="product-price">$90.00</p>
+            </div>
+          </div>
+
+          <div class="product-card" data-category="forks">
+            <div class="product-image">
+              <img src="./assets/images/theoryfork.webp" alt="Product Name">
+              <div class="product-overlay">
+                <button class="add-to-cart-btn">Add to Cart</button>
+              </div>
+            </div>
+            <div class="product-info">
+              <h3 class="product-title">Theory Fork Aluminum</h3>
+              <p class="product-price">$30.00</p>
+            </div>
+          </div>
+
+          <div class="product-card" data-category="forks">
+            <div class="product-image">
+              <img src="./assets/images/tsunamifork.webp" alt="Product Name">
+              <div class="product-overlay">
+                <button class="add-to-cart-btn">Add to Cart</button>
+              </div>
+            </div>
+            <div class="product-info">
+              <h3 class="product-title">Tsunami Fork Full Carbon</h3>
+              <p class="product-price">$70.00</p>
+            </div>
+          </div>
+
           <div class="product-card" data-category="chainrings">
             <div class="product-image">
               <img src="./assets/images/suginozen.png" alt="Product Name">
@@ -181,6 +281,19 @@
             <div class="product-info">
               <h3 class="product-title">Sugino Zen Chainring</h3>
               <p class="product-price">$270.00</p>
+            </div>
+          </div>
+
+          <div class="product-card" data-category="chainrings">
+            <div class="product-image">
+              <img src="./assets/images/deckas.jpg" alt="Product Name">
+              <div class="product-overlay">
+                <button class="add-to-cart-btn">Add to Cart</button>
+              </div>
+            </div>
+            <div class="product-info">
+              <h3 class="product-title">Deckas Chainring</h3>
+              <p class="product-price">$260.00</p>
             </div>
           </div>
 
@@ -207,6 +320,45 @@
             <div class="product-info">
               <h3 class="product-title">Evolve Tri-Spoke</h3>
               <p class="product-price">$2200.00</p>
+            </div>
+          </div>
+
+          <div class="product-card" data-category="framesets">
+            <div class="product-image">
+              <img src="./assets/images/gray.jpg" alt="Product Name">
+              <div class="product-overlay">
+                <button class="add-to-cart-btn">Add to Cart</button>
+              </div>
+            </div>
+            <div class="product-info">
+              <h3 class="product-title">Gray Frameset</h3>
+              <p class="product-price">$200.00</p>
+            </div>
+          </div>
+
+          <div class="product-card" data-category="framesets">
+            <div class="product-image">
+              <img src="./assets/images/leader.webp" alt="Product Name">
+              <div class="product-overlay">
+                <button class="add-to-cart-btn">Add to Cart</button>
+              </div>
+            </div>
+            <div class="product-info">
+              <h3 class="product-title">Leader Carbon Frameset</h3>
+              <p class="product-price">$290.00</p>
+            </div>
+          </div>
+
+          <div class="product-card" data-category="framesets">
+            <div class="product-image">
+              <img src="./assets/images/weapongold.jpg" alt="Product Name">
+              <div class="product-overlay">
+                <button class="add-to-cart-btn">Add to Cart</button>
+              </div>
+            </div>
+            <div class="product-info">
+              <h3 class="product-title">Weapon Gold Colorway Frameset</h3>
+              <p class="product-price">$280.00</p>
             </div>
           </div>
 
@@ -246,6 +398,19 @@
             <div class="product-info">
               <h3 class="product-title">Pizz Aero HT2 Crankset</h3>
               <p class="product-price">$170.00</p>
+            </div>
+          </div>
+
+          <div class="product-card" data-category="cranksets">
+            <div class="product-image">
+              <img src="./assets/images/weaponcrankset.jpg" alt="Product Name">
+              <div class="product-overlay">
+                <button class="add-to-cart-btn">Add to Cart</button>
+              </div>
+            </div>
+            <div class="product-info">
+              <h3 class="product-title">Weapon Crankset</h3>
+              <p class="product-price">$180 .00</p>
             </div>
           </div>
           <!-- Repeat product-card div for more products -->
