--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   -->
   <title>Jay FxD - Fixed Gear Shop</title>
   
-
+ 
   <!-- 
     - favicon
   -->
@@ -29,7 +29,7 @@
   <!-- 
     - custom css link
   -->
-  <link rel="stylesheet" href="./assets/css/style.css">
+  <link rel="stylesheet" href="./assets/css/style1.css">
 
 </head>
 
@@ -54,11 +54,7 @@
           </li>
 
           <li>
-            <a href="#" class="navbar-link">Portfolio</a>
-          </li>
-
-          <li>
-            <a href="#" class="navbar-link">Blog</a>
+            <a href="blog.html" class="navbar-link">Blog</a>
           </li>
 
           <li>
